<resources>
    <string name="app_name">NewsFlash</string>
    <string name="news">Nachrichten</string>
    <string name="fav">Favoriten</string>
    <string name="settings">Einstellungen</string>

    <string name="add_rss_feed">RSS-Feed hinzufügen:</string>
    <string name="rss_feed_link">Link zu RSS-Feed</string>
    <string name="add">Hinzufügen</string>
    <string name="rss_feeds">RSS-Feeds:</string>

    <string name="good_morning">Guten Morgen!</string>
    <string name="good_day">Guten Tag!</string>
    <string name="good_evening">Guten Abend!</string>
    <string name="good_night">Gute Nacht!</string>

    <string name="news_from">Nachrichten von</string>
    <string name="which_app_to_share">Welche App soll verwendet werden?</string>
    <string name="read_this_article">Lies dir diesen Artikel durch, den ich über NewsFlash gefunden habe:</string>
    <string name="error_while_adding_rss_feed">Fehler beim Hinzufügen des RSS-Feeds</string>
    <string name="invalid_rss_feed">Ungültiger RSS-Feed</string>
    <string name="saved_to_favs">Die Nachricht wurde zu deinen Favoriten hinzugefügt.</string>
    <string name="removed_from_favs">Die Nachricht wurde aus deinen Favoriten entfernt.</string>
    <string name="source_title">Quellen</string>
    <string name="topic_title">Themen</string>
    <string name="selected_filter_title">Filter </string>
</resources>