<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/txt_settings_heading"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/bt_back"
        app:layout_constraintTop_toTopOf="@+id/bt_back"
        tools:viewBindingIgnore="true"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_heading_add_rss_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_rss_feed"
        app:layout_constraintStart_toStartOf="@+id/bt_back"
        app:layout_constraintTop_toBottomOf="@+id/bt_back"
        tools:viewBindingIgnore="true" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_txt_link"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/rss_feed_link"
        app:counterMaxLength="200"
        app:helperText=""
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_heading_add_rss_feed"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading_add_rss_feed"
        app:startIconContentDescription="@string/rss_feed_link"
        app:startIconDrawable="@drawable/rss_feed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_rss_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_add_rss_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_baseline_add_24"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/wrapper_txt_link"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_txt_link" />

    <ListView
        android:id="@+id/list_rss_feeds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:dividerHeight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_add_rss_feed"
        app:layout_constraintStart_toStartOf="@+id/txt_heading_rss_feeds"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading_rss_feeds" />

    <TextView
        android:id="@+id/txt_heading_rss_feeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rss_feeds"
        app:layout_constraintStart_toStartOf="@+id/wrapper_txt_link"
        app:layout_constraintTop_toBottomOf="@+id/bt_add_rss_feed"
        tools:viewBindingIgnore="true" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:padding="3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bt_add_rss_feed"
        app:layout_constraintEnd_toStartOf="@+id/bt_add_rss_feed"
        app:layout_constraintTop_toTopOf="@+id/bt_add_rss_feed" />

</androidx.constraintlayout.widget.ConstraintLayout>