<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/news_list"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title_bar">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/selected_filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_filter_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/selected_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/selected_filter_title"
                app:layout_constraintEnd_toStartOf="@id/filter_dropdown_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/selected_filter_title"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/filter_dropdown_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/untitled"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/filters"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topic_filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_title" />

        <ListView
            android:id="@+id/topic_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/source_filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_title" />

        <ListView
            android:id="@+id/source_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </LinearLayout>

</LinearLayout>